# WonderlandGraphicsProject

./: CMakeLists.txt  README.md  main.cpp
scene/: ground.cpp  ground.h  main.cpp  texture_manager.cpp  texture_manager.h
scene/entities/: animated_model.cpp  animated_model.h  chunk.cpp  chunk.h  ground.cpp  ground.h  static_model.cpp  static_model.h
scene/entities/models/: winter_fir.gltf
scene/entities/models/candy_cane/: cane.gltf
scene/entities/models/fir_tree/: winter_fir.gltf
scene/entities/models/snowman/: snowman.gltf
scene/render/: shader.cpp
scene/scene/shaders/: simple.vert
scene/shaders/: animated.frag  animated.vert  bot.frag  box.frag  ground.frag  ground.vert  particle.frag  particle.vert  simple.frag  simple.vert  skybox.vert  static.frag  static.vert  static_model.frag
scene/utils/: texture_manager.cpp  texture_manager.h  world_manager.cpp  world_manager.h
